ags (0.6.53)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed distortion because of false recycling context allocation
	* fixed restore from XML removed inverted audio channel

ags (0.6.52)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing call to gdk_threads_enter() and gdk_threads_leave() in main.c

ags (0.6.51)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed NULL pointer access during main() by waiting gui thread to be started
	* fixed two race-conditions by editing ags_thread_pool.c

ags (0.6.50)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* grained timing in ags_thread_clock()
	* fixed dead-lock during initial thread run of AgsAsyncQueue see ags_task_thread.c and ags_thread-posix.c

ags (0.6.49)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed find child recall in ags_play_notation_audio_run.c

ags (0.6.48)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong parameter to nanosleep() in ags_thread_real_clock()

ags (0.6.47)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* definitely-fixed wrong parameter to nanosleep() in ags_thread_real_clock()
	* fixed data-race in ::tact callback of AgsDrum and AgsMatrix and possible NULL pointer access

ags (0.6.46)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong parameter to nanosleep() in ags_thread_real_clock()

ags (0.6.45)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed recently introduced bug that caused AgsMixer to be muted

ags (0.6.44)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed call to nanosleep() to use correct tact information

ags (0.6.43)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed seeking playable after read in order to work with libsndfile
	* fixed usage of gdk_threads_enter() and gdk_threads_leave() because some were missing

ags (0.6.42)
